compiler/tests/fa/errors/pure_print.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
خالص تابع فریاد(مقدار: صحیح): صحیح:
    چاپ مقدار
    بازگشت مقدار
تمام

تابع اصلی:
    چاپ فریاد(2)
تمام
